--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ mindrot = "0.4"
 dotenv = "6.4.1"
 google-api-client = "2.2.0"
 google-http-client = "1.43.3"
+send-grid = "4.10.0"
 
 [libraries]
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor-version" }
@@ -34,6 +35,7 @@ ktor-server-auth = { module = "io.ktor:ktor-server-auth", version.ref = "ktor-au
 ktor-server-auth-jwt = { module = "io.ktor:ktor-server-auth-jwt", version.ref = "ktor-auth" }
 google-api-client={module = "com.google.api-client:google-api-client", version.ref = "google-api-client" }
 google-http-client = { module = "com.google.http-client:google-http-client-jackson2", version.ref = "google-http-client" }
+sendgrid-java = { module = "com.sendgrid:sendgrid-java", version.ref= "send-grid" }
 
 
 
